--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
         <div class="flex flex-col items-center text-center gap-6">
             <div class="flex items-center gap-2 text-text-secondary">
                 <span class="material-symbols-outlined text-lg">hexagon</span>
-                <span class="text-sm font-semibold">Please let us know how we can improve this web app.</span>
+                <span class="text-sm font-semibold">Please <a href="/contact.html">let us know</a> how we can improve this web app.</span>
                 <br><a href='javascript:doNotSellMyInfoToggle();' class='footer'>Do Not Sell My Personal Information</a>
                 <script>
                     var tr_already_opted_out = "You already opted out from selling your personal information";
@@ -510,7 +510,7 @@
             </div>
             <div class="space-y-2">
                 <p class="text-text-secondary text-sm max-w-3xl leading-relaxed mx-auto">
-                    Lewis Structure Generator is a web application. Mission: Provide best-in-class chemistry tools to chemists and students. Using this website, you signify your acceptance of Terms and Conditions and Privacy Policy.
+                    Lewis Structure Generator is a web application. Mission: Provide best-in-class chemistry tools to chemists and students. Using this website, you signify your acceptance of <a href="/terms.html">Terms and Conditions</a> and <a href="/privacypolicy.html">Privacy Policy</a>.
                 </p>
                 <p class="text-text-secondary text-sm font-medium">
                     © 2026 LewisStructureGenerator.org. All rights reserved.
