--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
             </div>
             <h2 class="text-white text-xl font-bold tracking-tight">Lewis Structure Generator</h2>
         </div>
+        <nav class="hidden md:flex items-center gap-8">
+            <a class="text-white text-sm font-medium hover:text-primary transition-colors cursor-pointer">Choose language</a>
+            <a class="text-text-secondary text-sm font-medium hover:text-white transition-colors cursor-pointer" href="/ph/">Filipino</a>
+        </nav>
     </div>
 </header>
 
