--- a/ph/index.html
+++ b/ph/index.html
@@ -933,6 +933,17 @@ function updateStructure(molecule) {
                     </div>
                 </div>`;
             break;
+			// 简单的通用模板（适用于大部分新分子）
+case 'generic_linear':  // 用于 H2, F2, Br2, CO, HBr, HI等
+    structureHTML = `
+        <div class="text-center relative z-10">
+            <div class="flex items-center justify-center gap-8">
+                <div class="size-16 rounded-full bg-${color1}/20 border-2 border-${color1} flex items-center justify-center text-white font-bold text-2xl animate-pulse">${atom1}</div>
+                <div class="w-20 h-1 bg-gradient-to-r from-${color1} via-primary/50 to-${color2}"></div>
+                <div class="size-16 rounded-full bg-${color2}/20 border-2 border-${color2} flex items-center justify-center text-white font-bold text-2xl animate-pulse">${atom2}</div>
+            </div>
+        </div>`;
+    break;
 case 'pcl5':
     structureHTML = `
         <div class="text-center relative z-10">
