--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Lewis Structure Generator | Draw Lewis Dot Structures Online</title>
+    <title>Lewis Structure Generator</title>
     <meta name="description" content="Generate Lewis structures instantly. Enter a chemical formula to draw accurate Lewis dot structures with bonds, lone pairs, and charges. Free online tool.">
 <meta property="og:image" content="https://lewisstructuregenerator.org/logo.jpg">
 <meta property="og:url" content="https://lewisstructuregenerator.org">
